Java 9: Spring Boot 2.0 + Lombok